Huge performance improvements for the Cover Manager.

Thanks to Michael Reiher <redm@gmx.de> for the patch!

BUG: 210454